--- a/shareplate-backend/package.json
+++ b/shareplate-backend/package.json
@@ -49,23 +49,34 @@
     "!*/__tests__"
   ],
   "dependencies": {
+    "@loopback/authentication": "^9.0.10",
+    "@loopback/authentication-jwt": "^0.12.10",
     "@loopback/boot": "^5.0.9",
     "@loopback/core": "^4.0.9",
     "@loopback/repository": "^5.1.4",
     "@loopback/rest": "^12.0.9",
     "@loopback/rest-explorer": "^5.0.9",
     "@loopback/service-proxy": "^5.0.9",
+    "apn": "^2.2.0",
     "loopback-component-push": "^3.5.0",
     "loopback-connector-postgresql": "^5.5.2",
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "utility-types": "^3.10.0"
   },
   "devDependencies": {
     "@loopback/build": "^9.0.9",
     "@loopback/eslint-config": "^13.0.9",
     "@loopback/testlab": "^5.0.9",
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^14.18.36",
+    "@types/sinon": "^10.0.14",
+    "chai": "^4.3.7",
     "eslint": "^8.35.0",
+    "sinon": "^15.0.4",
+    "sinon-chai": "^3.7.0",
     "source-map-support": "^0.5.21",
+    "ts-node": "^10.9.1",
     "typescript": "~4.9.4"
   }
 }
