update: update json files

--- a/shareplate-backend/package.json
+++ b/shareplate-backend/package.json
@@ -58,6 +58,7 @@
     "@loopback/rest-explorer": "^5.0.9",
     "@loopback/service-proxy": "^5.0.9",
     "apn": "^2.2.0",
+    "axios": "^1.4.0",
     "loopback-component-push": "^3.5.0",
     "loopback-connector-postgresql": "^5.5.2",
     "tslib": "^2.0.0",
