--- a/shareplate-backend/package.json
+++ b/shareplate-backend/package.json
@@ -78,6 +78,8 @@
     "sinon-chai": "^3.7.0",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.9.1",
-    "typescript": "~4.9.4"
+    "typescript": "~4.9.4",
+    "chai-as-promised": "^7.1.1",
+    "@types/chai-as-promised": "^7.1.5"
   }
 }
